--- a/program1-1.html
+++ b/program1-1.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+<head>
 <body>
-
+    <head>Program 1-1</head>
+    <meta charset="utf-8">
+</head>
+<body>
     <h2>This is my first page</h2>
 
     <h1>Working here will be interesting</h1>
@@ -11,7 +15,9 @@
         Click to get Date and Time.</button>
 
     <p id="demo"></p>
+</body>
 
 </body>
+</head>
 
 </html>
