--- a/program1-1.html
+++ b/program1-1.html
@@ -2,22 +2,18 @@
 <html lang="en-us">
 
 <head>
-<body>
-    <head>Program 1-1</head>
+    </title>Program 1-1</title>
     <meta charset="utf-8">
 </head>
 <body>
-    <h2>This is my first page</h2>
+    <h1>This is my first page</h1>
 
-    <h1>Working here will be interesting</h1>
+    <h2>Working here will be interesting</h2>
 
     <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">
         Click to get Date and Time.</button>
 
     <p id="demo"></p>
 </body>
-
-</body>
-</head>
 
 </html>
